--- a/antora/components/refguide-index/modules/core/pages/index/metamodel/object/ManagedObject.adoc
+++ b/antora/components/refguide-index/modules/core/pages/index/metamodel/object/ManagedObject.adoc
@@ -14,30 +14,28 @@ interface ManagedObject {
   ObjectSpecification getSpecification()     // <.>
   Object getPojo()     // <.>
   EntityState getEntityState()
-  void refreshViewmodel(Supplier<Bookmark> bookmarkSupplier)     // <.>
   Supplier<ManagedObject> asSupplier()
   T assertCompliance(T pojo)     // <.>
   String getTitle()     // <.>
-  Optional<ObjectSpecification> getElementSpecification()     // <.>
   String getIconName()     // <.>
   ObjectIcon getIcon()
+  Either<ManagedObject, ManagedObject> asEitherWithOrWithoutMemoizedBookmark()
   ManagedObject unspecified()     // <.>
   ManagedObject empty(ObjectSpecification spec)     // <.>
   ManagedObject value(ObjectSpecification spec, Object pojo)     // <.>
   ManagedObject service(ObjectSpecification spec, Object pojo)     // <.>
   ManagedObject viewmodel(ObjectSpecification spec, Object pojo, Optional<Bookmark> bookmarkIfKnown)     // <.>
   ManagedObject entity(ObjectSpecification spec, Object pojo, Optional<Bookmark> bookmarkIfKnown)     // <.>
-  ManagedObject entityAttached(ObjectSpecification spec, Object pojo, Optional<Bookmark> bookmarkIfKnown)
-  ManagedObject entityDetached(ObjectSpecification spec, Object pojo)
+  ManagedObject entityHypridBookmarked(ObjectSpecification spec, Object pojo, Optional<Bookmark> bookmarkIfKnown)
+  ManagedObject entityHybirdDetached(ObjectSpecification spec, Object pojo)
   ManagedObject mixin(ObjectSpecification spec, Object pojo)     // <.>
   ManagedObject other(ObjectSpecification spec, Object pojo)     // <.>
   PackedManagedObject packed(ObjectSpecification elementSpec, Can<ManagedObject> nonScalar)     // <.>
   ManagedObject adaptScalar(SpecificationLoader specLoader, Object pojo)     // <.>
   ManagedObject adaptScalar(ObjectSpecification guess, Object pojo)
-  ManagedObject identified(ObjectSpecification spec, Object pojo, Bookmark bookmark)
-  ManagedObject adaptScalarInternal(ObjectSpecification guess, Object pojo, Optional<Bookmark> bookmarkIfAny)     // <.>
-  ManagedObject of(ObjectSpecification spec, Object pojo)     // <.>
   ManagedObject bookmarked(ObjectSpecification spec, Object pojo, Bookmark bookmark)     // <.>
+  ManagedObject adaptScalarInternal(ObjectSpecification guess, Object pojo, Optional<Bookmark> bookmarkIfAny)     // <.>
+  ManagedObject adaptParameter(ObjectActionParameter param, Object paramValue)
 }
 ----
 
@@ -56,11 +54,6 @@ Returns the specification that details the structure (meta-model) of this object
 --
 Returns the adapted domain object, the 'plain old java' object this managed object represents with the framework.
 --
-<.> xref:#refreshViewmodel_Supplier[refreshViewmodel(Supplier)]
-+
---
-If the underlying domain object is a viewmodel, refreshes any referenced entities. (Acts as a no-op otherwise.)
---
 <.> xref:#assertCompliance_T[assertCompliance(T)]
 +
 --
@@ -70,11 +63,6 @@ Unary operator asserting that _pojo_ and _#getSpecification()_ are compliant wit
 +
 --
 The (untranslated) title of the wrapped pojo.
---
-<.> xref:#getElementSpecification_[getElementSpecification()]
-+
---
-As used for the element type of collections.
 --
 <.> xref:#getIconName_[getIconName()]
 +
@@ -131,20 +119,15 @@ PACKED
 --
 For cases, when the pojo's specification is not available and needs to be looked up.
 --
-<.> xref:#adaptScalarInternal_ObjectSpecification_Object_Optional[adaptScalarInternal(ObjectSpecification, Object, Optional)]
-+
---
-spec and pojo don't need to be strictly in sync, we adapt if required
---
-<.> xref:#of_ObjectSpecification_Object[of(ObjectSpecification, Object)]
-+
---
-Optimized for cases, when the pojo's specification is already available. If _pojo_ is an entity, automatically memoizes its bookmark.
---
 <.> xref:#bookmarked_ObjectSpecification_Object_Bookmark[bookmarked(ObjectSpecification, Object, Bookmark)]
 +
 --
 Optimized for cases, when the pojo's specification and bookmark are already available.
+--
+<.> xref:#adaptScalarInternal_ObjectSpecification_Object_Optional[adaptScalarInternal(ObjectSpecification, Object, Optional)]
++
+--
+spec and pojo don't need to be strictly in sync, we adapt if required
 --
 
 == Members
@@ -164,11 +147,6 @@ Returns the specification that details the structure (meta-model) of this object
 
 Returns the adapted domain object, the 'plain old java' object this managed object represents with the framework.
 
-[#refreshViewmodel_Supplier]
-=== refreshViewmodel(Supplier)
-
-If the underlying domain object is a viewmodel, refreshes any referenced entities. (Acts as a no-op otherwise.)
-
 [#assertCompliance_T]
 === assertCompliance(T)
 
@@ -178,11 +156,6 @@ Unary operator asserting that _pojo_ and _#getSpecification()_ are compliant wit
 === getTitle()
 
 The (untranslated) title of the wrapped pojo.
-
-[#getElementSpecification_]
-=== getElementSpecification()
-
-As used for the element type of collections.
 
 [#getIconName_]
 === getIconName()
@@ -243,17 +216,12 @@ For cases, when the pojo's specification is not available and needs to be looked
 
 Fails if the pojo is non-scalar.
 
-[#adaptScalarInternal_ObjectSpecification_Object_Optional]
-=== adaptScalarInternal(ObjectSpecification, Object, Optional)
-
-spec and pojo don't need to be strictly in sync, we adapt if required
-
-[#of_ObjectSpecification_Object]
-=== of(ObjectSpecification, Object)
-
-Optimized for cases, when the pojo's specification is already available. If _pojo_ is an entity, automatically memoizes its bookmark.
-
 [#bookmarked_ObjectSpecification_Object_Bookmark]
 === bookmarked(ObjectSpecification, Object, Bookmark)
 
 Optimized for cases, when the pojo's specification and bookmark are already available.
+
+[#adaptScalarInternal_ObjectSpecification_Object_Optional]
+=== adaptScalarInternal(ObjectSpecification, Object, Optional)
+
+spec and pojo don't need to be strictly in sync, we adapt if required
