--- a/core/config/src/main/adoc/modules/config/pages/application-specific/application-css.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/application-specific/application-css.adoc
@@ -3,7 +3,7 @@
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-All of the layout annotations provide the ability to specify adhoc CSS classes, associated with the corresponding element:
+All the layout annotations provide the ability to specify adhoc CSS classes, associated with the corresponding element:
 
 * xref:refguide:applib:index/annotation/DomainObjectLayout.adoc#cssClass[@DomainObjectLayout#cssClass()]
 * xref:refguide:applib:index/annotation/ActionLayout.adoc#cssClass[@ActionLayout#cssClass()]
@@ -31,3 +31,19 @@ isis:
 ----
 
 This corresponds to the `static/css/application.css` (in `src/main/resources` in the simpleapp's webapp module).
+
+If you change the contents of this file, you may find that your end users' browsers will still cache the old value.
+You can prevent this from occurring ("bust the cache") by setting this Spring Boot config value:
+
+[source,yaml]
+.application.yml
+----
+spring:
+  web:
+    resources:
+      cache:
+        cachecontrol:
+          max-age: 3600
+----
+
+
